syntax = "proto3";

option java_multiple_files = true;

package io.albot.example.grpc;

message UserResponse {
  int64 id = 1;
  string name = 2;
  int32 age = 3;
  repeated AddressResponse addresses = 4;
}

message AddressResponse {
  int64 id = 1;
  string country = 2;
  string city = 3;
  string street = 4;
  int32 homeNumber = 5;
  int32 flatNumber = 6;
}

message GetUserRequest {
  int64 id = 1;
}

service UserService {
  rpc getUser(GetUserRequest) returns (UserResponse);
}